[gd_scene load_steps=25 format=3 uid="uid://c30yqjvqjoy4u"]

[ext_resource type="Script" path="res://scripts/enemies/chaser_enemy.gd" id="1_k40bd"]
[ext_resource type="Script" path="res://scripts/other/state_machine.gd" id="2_shc54"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_idle.gd" id="3_gxmvj"]
[ext_resource type="PackedScene" uid="uid://dwo8g0e354tel" path="res://scenes/gui/health_bar.tscn" id="3_vtwhl"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_wander.gd" id="4_2o4ip"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_chase.gd" id="4_341sb"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_attack.gd" id="5_kiqp3"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_takedmg.gd" id="6_rq73r"]
[ext_resource type="Script" path="res://scripts/states/enemy/enemy_death.gd" id="7_np0au"]
[ext_resource type="PackedScene" uid="uid://d3lnabkpjpnrw" path="res://scenes/other/hurtbox_component.tscn" id="11_h36sy"]
[ext_resource type="PackedScene" uid="uid://d3g8tgfu6ecju" path="res://scenes/other/health_collectable.tscn" id="11_pnel6"]
[ext_resource type="PackedScene" uid="uid://dx75c8mg74i2t" path="res://scenes/other/essence_collectable.tscn" id="12_4yoa5"]
[ext_resource type="PackedScene" uid="uid://dw85pq25vevqj" path="res://scenes/other/health_component.tscn" id="12_jko6h"]
[ext_resource type="PackedScene" uid="uid://itnceq78dgby" path="res://scenes/other/experience_collectable.tscn" id="13_jf5ii"]

[sub_resource type="Animation" id="Animation_r6byx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/CSGMesh3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rig/CSGMesh3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -6.28319, 0)]
}

[sub_resource type="Animation" id="Animation_107xp"]
resource_name = "move"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/CSGMesh3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.25, 0), Vector3(0, 0, 0), Vector3(0, -0.175, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rig/CSGMesh3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ki6m3"]
_data = {
"RESET": SubResource("Animation_r6byx"),
"move": SubResource("Animation_107xp")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_23usq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g1hmr"]
size = Vector3(1.21436, 1.22961, 1.24805)

[sub_resource type="BoxMesh" id="BoxMesh_enggn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5xnju"]
albedo_color = Color(0.627451, 0.133333, 0.984314, 1)

[sub_resource type="BoxMesh" id="BoxMesh_p55ef"]
material = SubResource("StandardMaterial3D_5xnju")

[sub_resource type="Curve" id="Curve_l500e"]
max_value = 0.5
_data = [Vector2(0, 0.192308), 0.0, 0.0, 0, 0, Vector2(0.539326, 0.291209), 0.0, 0.0, 0, 0, Vector2(1, 0.313187), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="SphereShape3D" id="SphereShape3D_3jbml"]
radius = 16.6683

[node name="Enemy" type="CharacterBody3D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_k40bd")
statetimer_min = 0.2
statetimer_max = 2.0

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ki6m3")
}
autoplay = "move"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_23usq")

[node name="Rig" type="Node3D" parent="."]

[node name="Hitbox3D" type="Area3D" parent="Rig"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rig/Hitbox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000732422, 0.114807, -0.124024)
shape = SubResource("BoxShape3D_g1hmr")

[node name="CSGMesh3D" type="CSGMesh3D" parent="Rig"]
transform = Transform3D(0.738932, 0, -3.30035e-06, 0, 0.738932, 0, 3.30035e-06, 0, 0.738932, 0, 0, 0)
mesh = SubResource("BoxMesh_enggn")
material = SubResource("StandardMaterial3D_5xnju")

[node name="CPUParticles3D" type="CPUParticles3D" parent="Rig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.162813, 0.306184)
emitting = false
amount = 5
randomness = 0.2
local_coords = true
mesh = SubResource("BoxMesh_p55ef")
emission_shape = 3
emission_box_extents = Vector3(1, 0.25, 1)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, 0.2, 0)
tangential_accel_min = -2.0
tangential_accel_max = -2.0
scale_amount_curve = SubResource("Curve_l500e")

[node name="HealthBar" parent="." instance=ExtResource("3_vtwhl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Vision3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Vision3D"]
transform = Transform3D(1.29038, 0, 0, 0, 1.29038, 0, 0, 0, 1.29038, -0.000732422, 0.114807, -1.12516)
shape = SubResource("SphereShape3D_3jbml")

[node name="VisionRayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -10)
collision_mask = 3

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_shc54")
initial_state = NodePath("EnemyIdle")

[node name="EnemyChase" type="Node" parent="StateMachine"]
script = ExtResource("4_341sb")

[node name="EnemyIdle" type="Node" parent="StateMachine"]
script = ExtResource("3_gxmvj")

[node name="EnemyWander" type="Node" parent="StateMachine"]
script = ExtResource("4_2o4ip")

[node name="EnemyAttack" type="Node" parent="StateMachine"]
script = ExtResource("5_kiqp3")
attack_cooldown = 2.0

[node name="EnemyTakeDMG" type="Node" parent="StateMachine"]
script = ExtResource("6_rq73r")

[node name="EnemyDeath" type="Node" parent="StateMachine"]
script = ExtResource("7_np0au")
health_collectable_scene = ExtResource("11_pnel6")
essence_collectable_scene = ExtResource("12_4yoa5")
exp_collectable_scene = ExtResource("13_jf5ii")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("11_h36sy")]
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("12_jko6h")]
health = 80
max_health = 80

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5127, 0.00321913)
light_color = Color(0.623529, 0.168627, 0.890196, 1)
light_energy = 2.0
light_indirect_energy = 2.0
omni_range = 5.11108

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="body_entered" from="Rig/Hitbox3D" to="." method="_on_hitbox_3d_body_entered"]
[connection signal="body_exited" from="Rig/Hitbox3D" to="." method="_on_hitbox_3d_body_exited"]
[connection signal="body_entered" from="Vision3D" to="." method="_on_vision_3d_body_entered"]
[connection signal="body_exited" from="Vision3D" to="." method="_on_vision_3d_body_exited"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="RecoveryTimer" to="StateMachine/EnemyTakeDMG" method="_on_recovery_timer_timeout"]
